Update File .github

--- a/.github/workflows/release-branch.yml
+++ b/.github/workflows/release-branch.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - release/**
+      - master/**
     paths-ignore:
       - '.github/**'
       - 'src/**'
